DEVOPS-2219: config
(DEVOPS-2219: Create "system properties" property in maven.ap.parent shared in our 20+ tycho test runners)