@@ -58,12 +58,7 @@
                 <configuration>
                     <argLine>
                         ${failsafeArgLine}
-                        --add-opens=java.base/java.lang=ALL-UNNAMED
-                        --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
-                        --add-opens=java.base/java.nio=ALL-UNNAMED
-                        --add-opens=java.base/java.nio.channels=ALL-UNNAMED
-                        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
-                        --add-opens=java.base/sun.nio=ALL-UNNAMED
+						${knime.tycho.test.configuration}
                     </argLine>
                 </configuration>
             </plugin>
